完善了配置读取类，comments匹配待完成

--- a/stock_searcher/App.config
+++ b/stock_searcher/App.config
@@ -1,6 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="nnconfig" type="nnns.NnConfig,stock_searcher"/>
+  </configSections>
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+
+  <nnconfig>
+    <!--这里是氨基酸和修饰，对照以及分子量，咳，one是单字母的意思-->
+    <aminoAcids>
+      <add name="ALA" one="A" mw="6543"/>
+      <add name="ASP" one="D" mw="993"/>
+    </aminoAcids>
+    
+    <!--这里是转盐对照，转盐类型以及偏移量（flg 从0-63）-->
+    <tfaflgs>
+      <!--匹配忽略大小写，正则表达式效率不高，但这里为了以后兼容性，还是选择正则表达式匹配，所以name可以写为正则表达式-->
+      <!--注意记录这里没有收录的，及时添加-->
+      <!--flg为0表示需要转盐-->
+      <add name="tfa" flg="0"/>
+      <add name="removal" flg="0"/>
+      <add name="转.+盐" flg="0"/>
+      <!--标准转盐-->
+      <add name="standard" flg="1"/>
+      <add name="标准" flg="1"/>
+      <!--醋酸-->
+      <add name="acet" flg="2"/>
+      <!--盐酸-->
+      <add name="hydrochloride" flg="3"/>
+      <add name="HCl" flg="3"/>
+      <!--蚁酸-->
+      <add name="formate" flg="4"/>
+      <!--磷酸-->
+      <add name="phosphate" flg="5"/>
+      
+    </tfaflgs>
+  </nnconfig>
+  
 </configuration>
