--- a/stock_searcher/App.config
+++ b/stock_searcher/App.config
@@ -1,24 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="nnconfig" type="nnns.NnConfig,stock_searcher"/>
+    <section name="nnconfig" type="nnns.data.NnConfig,stock_searcher"/>
   </configSections>
   
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 
+  <connectionStrings>
+    <add name="nnhistory" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=I:\test.accdb"/>
+  </connectionStrings>
 
   <nnconfig>
     <!--这里是氨基酸和修饰，对照以及分子量，咳，one是单字母的意思-->
     <aminoAcids>
-      <add name="ALA" one="A" mw="6543"/>
-      <add name="ASP" one="D" mw="993"/>
+      <add name="Ala" one="A" mw="89.09"/>
+      <add name="Cys" one="C" mw="121.16"/>
+      <add name="Asp" one="D" mw="133.10"/>
+      <add name="Glu" one="E" mw="147.13"/>
+      <add name="Phe" one="F" mw="165.19"/>
+      <add name="Gly" one="G" mw="75.07"/>
+      <add name="His" one="H" mw="155.16"/>
+      <add name="Ile" one="I" mw="131.18"/>
+      <add name="Lys" one="K" mw="146.19"/>
+      <add name="Leu" one="L" mw="131.18"/>
+      <add name="Met" one="M" mw="149.21"/>
+      <add name="Asn" one="N" mw="132.12"/>
+      <add name="Pro" one="P" mw="115.13"/>
+      <add name="Gln" one="Q" mw="146.15"/>
+      <add name="Arg" one="R" mw="174.20"/>
+      <add name="Ser" one="S" mw="105.09"/>
+      <add name="Thr" one="T" mw="119.12"/>
+      <add name="Val" one="V" mw="117.15"/>
+      <add name="Trp" one="W" mw="204.23"/>
+      <add name="Tyr" one="Y" mw="181.19"/>
+    
+      <add name="Ace" one="" mw="42.04"/>
+      <add name="Bio" one="" mw="226.3"/>
+      <add name="5-FAM" one="" mw="358.3"/>
+      <add name="Ami" one="" mw="-1"/>
     </aminoAcids>
     
     <!--这里是转盐对照，转盐类型以及偏移量（flg 从0-63）-->
     <tfaflgs>
-      <!--匹配忽略大小写，正则表达式效率不高，但这里为了以后兼容性，还是选择正则表达式匹配，所以name可以写为正则表达式-->
+      <!--匹配忽略大小写，正则表达式效率不是很高，但这里为了以后兼容性，还是选择正则表达式匹配，所以name可以写为正则表达式-->
       <!--注意记录这里没有收录的，及时添加-->
       <!--flg为0表示需要转盐-->
       <add name="tfa" flg="0"/>
@@ -29,6 +55,7 @@
       <add name="标准" flg="1"/>
       <!--醋酸-->
       <add name="acet" flg="2"/>
+      <add name="醋酸" flg="2"/>
       <!--盐酸-->
       <add name="hydrochloride" flg="3"/>
       <add name="HCl" flg="3"/>
@@ -38,6 +65,20 @@
       <add name="phosphate" flg="5"/>
       
     </tfaflgs>
+  
+  <!--每一列对应的位置-->
+    <titles>
+      <add name="workNo" column="1"/>
+      <add name="catalogNo" column="2"/>
+      <add name="group" column="7"/>
+      <add name="orderId" column="12"/>
+      <add name="info" column="13"/>
+      <add name="sequence" column="14"/>
+      <add name="quality" column="16"/>
+      <add name="purity" column="17"/>
+      <add name="modification" column="18"/>
+      <add name="mw" column="19"/>
+    </titles>
   </nnconfig>
   
 </configuration>
