--- a/stock_searcher/App.config
+++ b/stock_searcher/App.config
@@ -16,10 +16,12 @@
     <add key="stimes" value="0" />
     <!--搜索的条数-->
     <add key="scount" value="0" />
+    <add key="nnkey" value="cgxB1WJe7pU46KD5jpW/GQ=="/>
   </appSettings>
   <connectionStrings>
-    <add name="nnhistory" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=I:\test\11.29\history11.10.accdb" />
-    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+    <!--库存路径-->
+    <add name="nnstock_d" connectionString="C:\Users\pepuser\Desktop\polypeptideInfo.accdb" />
+    <add name="nnstock" connectionString="\\c11w16fs01.genscript.com\int_17005\化学部\内部\分装发货信息\分装常用表格 备份\库存软件\polypeptideInfo.accdb" />
   </connectionStrings>
   <nnconfig>
     <!--这里是氨基酸和修饰，对照以及分子量，咳，one是单字母的意思-->
