--- a/stock_searcher/App.config
+++ b/stock_searcher/App.config
@@ -92,7 +92,7 @@
     <savepath>
       <!--...-->
       <!--<add path="I:\"/>-->
-      <add path="I:\"/>
+      <add path="D:\"/>
     </savepath>
   </nnconfig>
 </configuration>
